[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/characters/imp.png" type="Texture" id=1]
[ext_resource path="res://NPC.gd" type="Script" id=2]
[ext_resource path="res://assets/art/characters/interaction_bubble.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 0.0

[node name="NPC" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 6 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( -1, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="InteractionSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -10 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
